<resources>
    <string name="app_name">Social Note</string>
    <string name="save_note_menu_title">SAVE</string>
    <string name="add_note_label">Create</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>
    <string name="delete_note_dialog_title">Delete Note</string>
    <string name="delete_note_dialog_message">Do you want to delete this note?</string>
    <string name="delete_note_dialog_positive_button_label">Yes</string>
    <string name="delete_note_dialog_negative_button_label">Dismiss</string>
    <string name="menu_item_search_label">Search</string>
    <string name="edit_note_toolbar_label">Edit</string>
    <string name="text_title_label">Title ..</string>
    <string name="search_view_hint_label">Search</string>
    <string name="back_button_dialog_title">Unsaved Work</string>
    <string name="back_button_dialog_msg_ptII">Do you want to quit?</string>
    <string name="back_button_dialog_msg_ptI">You didn\'t save what you wrote.</string>
    <string name="back_button_dialog_positive_button_label">Yes</string>
    <string name="back_button_dialog_negative_button_label">No, Keep Writing</string>
    <string name="note_time_reminder_notification_title">Note Reminder</string>
    <string name="note_notification_open_action_label">Open Note</string>
    <string name="note_notification_dismiss_action_label">Dismiss</string>
    <string name="notification_id" translatable="false">Task-Reminder</string>
    <string name="notification_note_time_reminder_channel_name">Note Time Reminder</string>

    <string name="empty_editor_msg">Nothing to save</string>
    <string name="register_label_text">Register to be able to share posts and sync your notes to the cloud ..</string>

    <string name="web_api_key">key</string>
    <string name="facebook_app_id">key</string>
    <string name="fb_login_protocol_scheme">key</string>

    <string name="auth_failed_msg">Authentication Failed!</string>
    <string name="create_note_shortcut_short_label">Create a new Note</string>
    <string name="create_note_shortcut_long_label">Tap to create a new Note</string>
    <string name="create_note_shortcut_disabled_message">Disabled at the moment</string>
    <string name="title_activity_location_map_actitivty">Map</string>
    <string name="request_location_rational_dialog">To be able to use this feature, You should grant the Location permission. Proceed?</string>
    <string name="note_geofence_notification_id">Note-Location-Reminder</string>
    <string name="note_geofence_notification_name">Note Location Reminder</string>
    <string name="note_geofence_notification_channel_name" translatable="false">Note-Location-Reminder</string>
    <string name="note_geofence_notification_title">Note Location Reminder</string>
    <string name="error_msg">Something went wrong</string>
    <string name="place_picker_dialog_title">Pick Location</string>
    <string name="place_picker_dialog_message">Do you want to be notified whenever you enter</string>
    <string name="place_picker_dialog_button_positive_label">Yes</string>
    <string name="place_picker_dialog_button_negative_label">No, Change it</string>
    <string name="network_error_label">Looks like you don\'t have an internet connection, enable your internet connection and press the retry button</string>
    <string name="network_retry_button_text">Retry</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="note_sync_key" translatable="false">Note-Sync-Key</string>
    <string name="sync_notes_dialog_title">Syncing</string>
    <string name="sync_notes_dialog_message">To be able to save your local saved notes to the cloud, you should sign in.</string>
    <string name="sync_notes_dialog_neg_button_label">Cancel</string>
    <string name="sync_notes_dialog_pos_button_label">Okay</string>
    <string name="settings_menu_item_label">Settings</string>
    <string name="feed_menu_item_label">Posts</string>
    <string name="create_post_label">Post what\'s in your mind</string>
    <string name="comment_submit_button_label">Submit</string>
    <string name="notification_post_channel_id">Social-Posts</string>
    <string name="notification_social_posts_channel_name">Social Posts</string>
    <string name="open_post_notification_action_label">Open Post</string>
    <string name="share_title">Share Post</string>
    <string name="reader_title">Reader</string>
    <string name="author_title">Author</string>
    <string name="originator_title">Originator</string>
    <string name="empty_note_state_label">Your note list is empty, Press the create button to add your first note</string>
    <string name="type_comment_hint">Type your comment ..</string>
    <string name="user_profile_recent_posts_label">Recent Posts</string>
    <string name="login_twitter_label">Continue with Twitter</string>
    <string name="login_google_label">Continue with Google</string>
    <string name="login_facebook_label">Continue with Facebook</string>
    <string name="push_notifications_key">push-notification-key</string>
    <string name="push_notification_summary_on">Enabled</string>
    <string name="push_notification_summary_off">Disabled</string>
    <string name="push_notification_summary_title">Push Notifications</string>
    <string name="set_time_reminder_menu_item_label">Set Time Reminder</string>
    <string name="set_location_reminder_menu_item_label">Set Location Reminder</string>
    <string name="on_boarding_first_card_description">Keep your stored notes with sync in the clouds</string>
    <string name="on_boarding_second_card_description">Get a notification whenever you enter a specific location</string>
    <string name="on_boarding_third_card_description"><![CDATA[Share what comes in your mind like plans, ideas & poems and get involved in the community]]></string>
    <string name="delete_author_comment_dialog_title">Delete Comment</string>
    <string name="delete_author_comment_dialog_message">Do you want to delete this comment?</string>
    <string name="delete_author_comment_dialog_negative_button">No</string>
    <string name="delete_author_comment_dialog_positive_button">Yes, Delete</string>
    <string name="delete_post_dialog_title">Delete Post</string>
    <string name="delete_post_dialog_message">Do you want to delete your post?</string>
    <string name="delete_post_dialog_negative_button">No</string>
    <string name="delete_post_dialog_positive_button">Yes, Delete</string>
    <string name="empty_header_text">You\'re not signed in, Click here to sign in!</string>
    <string name="post_menu_item_label">Post</string>
    <string name="failed_upolad_message">Failed uploading image</string>
    <string name="color_pick_choose_title">Pick</string>
    <string name="empty_post_message">Nothing to share!</string>
    <string name="color_picker_positive_button">Ok</string>
    <string name="color_picker_negative_button">Cancel</string>
    <string name="comments_toolbar_label">Comments</string>
    <string name="post_alert_dialog_message">Do you want to discard the post?</string>
    <string name="post_alert_dialog_title">Unsaved work</string>
    <string name="image_picker_chooser_title">Choose picture with</string>
    <string name="country_picker_dialog_title">Pick Country</string>
    <string name="country_picker_dialog_message">We recommend you to provide your country name to make the best out of Social Note and it help us provide a valuable experience for our users</string>
    <string name="comment_notification_title">commented on your post</string>
    <string name="like_notification_title">liked your post</string>
    <string name="logout_menu_item_label">Logout</string>
    <string name="logout_dialog_positivit_button">Logout</string>
    <string name="logout_dialog_negative_button">Cancel</string>
    <string name="logout_dialog_tite">Logout</string>
    <string name="logout_dialog_message">Do you want to logout?</string>
    <string name="login_menu_item">Login</string>
    <string name="about_menu_item_label">About</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="on_boarding_finish_button_label">Start</string>
    <string name="application_settings_menu_title">Application Settings</string>
    <string name="account_menu_title">Account</string>
    <string name="application_menu_title">Application</string>
    <string name="terms_label">Terms and conditions</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="posting_proccess_msg">Posting ..</string>
    <string name="blocked_message">You have violated our terms of services and conditions, or assaulted other users in the community by sharing, or writing directly or indirectly Abusive words in a post or a comment, which is totally unacceptable and we can\'t afford such actions that may hurt our community members. If you like to get your permissions back Contact us on our Facebook page or Twitter account.</string>
    <string name="blocked_dialog_button_label">OK, Dismiss</string>
    <string name="blocked_dialog_title">Blocked</string>
    <string name="uploading_media_msg">Uploading image .. please wait</string>
    <string name="add_image_menu_title">Add Image</string>
</resources>
