<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="playground.develop.socialnote.ui.CommentActivity" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/commentsParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/post_comments_scene">

        <LinearLayout
            android:id="@+id/commentInputParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/comment_input_parent_margin_start"
            android:layout_marginBottom="@dimen/comment_input_parent_margin_bottom"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentInputEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/comment_author_input_height"
                android:layout_weight="3"
                android:background="@drawable/comment_input_background"
                android:hint="@string/type_comment_hint"
                android:padding="@dimen/comment_input_padding"
                app:layout_constraintEnd_toStartOf="@+id/commentSubmitButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/commentSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{handlers::onSubmitButtonClick}"
                android:text="@string/comment_submit_button_label"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send"
                app:tint="#fff" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/postParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_feed_parent_margin"
            app:cardCornerRadius="@dimen/list_item_feed_parent_corner_radius"
            app:cardElevation="@dimen/list_item_feed_parent_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/postBodyParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/postAuthorImage"
                    android:layout_width="@dimen/post_image_width"
                    android:layout_height="@dimen/post_image_height"
                    android:layout_margin="@dimen/post_image_margin"
                    android:onClick="@{handlers::onUserImageClick}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/postDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/post_date_height"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/postAuthorImage"
                    app:layout_constraintStart_toEndOf="@id/postAuthorImage"
                    app:layout_constraintTop_toBottomOf="@id/postAuthorName" />

                <org.sufficientlysecure.htmltextview.HtmlTextView
                    android:id="@+id/postBodyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/post_body_margin"
                    app:layout_constraintBottom_toTopOf="@id/postImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/postAuthorImage" />

                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comments_post_image_height"
                    android:layout_margin="@dimen/list_item_feed_post_image_margin"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/postBodyText" />

                <LinearLayout
                    android:id="@+id/postSocialInteractParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/postImage">

                    <TextView
                        android:id="@+id/postLikesCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/list_item_feed_like_counter_margin"
                        android:gravity="center"
                        android:onClick="@{handlers::onLikesCounterClick}"
                        android:padding="@dimen/list_item_feed_like_counter_padding"
                        android:text="12"
                        android:textSize="@dimen/list_item_feed_like_counter_text_size" />

                    <ImageButton
                        android:id="@+id/postLikeButton"
                        android:layout_width="@dimen/list_item_feed_social_interact_button_width"
                        android:layout_height="@dimen/list_item_feed_social_interact_button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/list_item_feed_social_interact_button_margin"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:onClick="@{handlers::onLikeButtonClick}"
                        app:srcCompat="@drawable/ic_like_normal" />

                    <ImageButton
                        android:id="@+id/postUnLikeButton"
                        android:layout_width="@dimen/list_item_feed_social_interact_button_width"
                        android:layout_height="@dimen/list_item_feed_social_interact_button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/list_item_feed_social_interact_button_margin"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:onClick="@{handlers::onUnLikeButtonClick}"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_like_state" />

                    <ImageButton
                        android:id="@+id/postCommentButton"
                        android:layout_width="@dimen/list_item_feed_social_interact_button_width"
                        android:layout_height="@dimen/list_item_feed_social_interact_button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/list_item_feed_social_interact_button_margin"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{handlers::onCommentButtonClick}"
                        app:srcCompat="@drawable/ic_comment" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                    <ImageButton
                        android:id="@+id/postShareButton"
                        android:layout_width="@dimen/list_item_feed_social_interact_button_width"
                        android:layout_height="@dimen/list_item_feed_social_interact_button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/list_item_feed_social_interact_button_margin"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{handlers::onSharePostClick}"
                        app:srcCompat="@drawable/ic_share_post" />
                </LinearLayout>

                <TextView
                    android:id="@+id/postAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_feed_user_name_margin"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/list_item_feed_user_name_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/postDate"
                    app:layout_constraintStart_toEndOf="@+id/postAuthorImage"
                    app:layout_constraintTop_toTopOf="@+id/postAuthorImage" />

                <TextView
                    android:id="@+id/postAuthorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_feed_user_title_margin"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/author_title"
                    android:textColor="@color/author_title_color"
                    android:visibility="gone"
                    app:layout_constraintBaseline_toBaselineOf="@id/postAuthorName"
                    app:layout_constraintBottom_toBottomOf="@id/postAuthorName"
                    app:layout_constraintStart_toEndOf="@+id/postAuthorName"
                    app:layout_constraintTop_toTopOf="@id/postAuthorName" />

                <TextView
                    android:id="@+id/postReaderTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_feed_user_title_margin"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/reader_title"
                    android:textColor="@color/reader_title_color"
                    android:visibility="gone"
                    app:layout_constraintBaseline_toBaselineOf="@id/postAuthorName"
                    app:layout_constraintBottom_toBottomOf="@id/postAuthorName"
                    app:layout_constraintStart_toEndOf="@+id/postAuthorName"
                    app:layout_constraintTop_toTopOf="@id/postAuthorName" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/commentInputParent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postParent"
            app:reverseLayout="true"
            tools:listitem="@layout/list_item_comment_right" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>